deploy/yamls/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: inventory
  name: inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: inventory
      name: inventory
    spec:
      containers:
        - image: quay.io/parodos/inventory:latest
          imagePullPolicy: Always
          name: inventory
          ports:
            - containerPort: 8080
          resources: {}
      imagePullSecrets:
        - name: parodosSecret
      restartPolicy: Always
      securityContext: {}
status: {}
