deploy/yamls/wf--e89c4717-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: wf--e89c4717
  name: wf--e89c4717
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: inventory
                port:
                  name: port-8080
            path: /inventory
            pathType: Prefix
          - backend:
              service:
                name: customers
                port:
                  name: port-8080
            path: /customers
            pathType: Prefix
          - backend:
              service:
                name: orders
                port:
                  name: port-8080
            path: /orders
            pathType: Prefix
          - backend:
              service:
                name: gateway
                port:
                  name: port-8080
            path: /gateway
            pathType: Prefix
status:
  loadBalancer: {}
